--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
     </head>
     <body>
         <h1>Discover hidden places in the world around you</h1>
+        <h4>Download Excursion(Coming Soon!)</h4>
+        <p><video width="320" height="500" autoplay muted>
+            <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        </video></p>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <p><img src = "resources/images/camp.webp"></img></p>
+        <p><img src = "resources/images/phone.webp"></img></p>
+        <h1>Coming Soon for iPhone and Android</h1>
+        <h4>Download Excursion(Coming Soon!)</h4>
+        <h5>© Excursion</h5>
     </body>
 </html>
